alteraçoes
